# AIEDU

./: README.md  colab_starter.ipynb  goals.md  pyproject.toml  quickstart.py
00-Introduction/: NavigatingTheTerminal.ipynb  README.md
01-SWE-Fundamentals/00-Environment-Setup/: README.md  WorkingWithEnvironments.ipynb  example.py
01-SWE-Fundamentals/01-Python-for-AI/: WorkingWithAgents.ipynb  WorkingWithEnvironments.ipynb  openai_quickstart.py
01-SWE-Fundamentals/02-Git-and-Version-Control/: git_workflow.md
notebooks/: colab_starter.ipynb  fine_tune_with_hugging_face.ipynb
